--- a/Advance Java/3 Servlet_CRUD/src/main/webapp/login.html
+++ b/Advance Java/3 Servlet_CRUD/src/main/webapp/login.html
@@ -18,7 +18,7 @@
 			</div>
 			<div>
 				<h2>Login Form</h2>
-				<form action="" method="post">
+				<form action="LoginServlet" method="post">
 					<input
 						type="email"
 						placeholder="Enter Email"
