--- a/Advance Java/3 Servlet_CRUD/src/main/webapp/profileHeader.html
+++ b/Advance Java/3 Servlet_CRUD/src/main/webapp/profileHeader.html
@@ -11,8 +11,9 @@
 				<ul>
 					<li><a href="ProfileServlet">Home</a></li>
 					<li><a href="UpdateProfileForm">Update</a></li>
-					<li><a href="">DeActivate</a></li>
-					<li><a href="">Logout</a></li>					
+					<li><a href="ViewAllUsersServlet">ViewAllUsers</a></li>
+					<li><a href="DeActivateServlet">DeActivate</a></li>
+					<li><a href="LogoutServlet">Logout</a></li>					
 				</ul>
 			</div>
 			
